[package]
name = "mtggoldfish2landlord"
version = "0.1.0"
authors = ["Justin Shrake <justinshrake@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
log = "0.4.0"
env_logger = "0.7.0"
bincode = "1.0.1"
flate2 = "1.0"
landlord = {path="../../lib"}
reqwest = { version = "0.10", features = ["blocking"]}
select = "0.4"
lazy_static = "1.2.0"
